[workspace]
resolver = "2"

members = [
    "aws-lambda-functions",
    "modules/command/domain",
    "modules/command/interface-adaptor-if",
]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"

aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.80.0"

chrono = "0.4.41"
downcast-rs = "2.0.1"
hyper = { version = "1.6.0", features = ["full"] }
itertools = "0.14.0"
log = "0.4.27"
once_cell = "1.21.3"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"


ulid-generator-rs = "0.0.112"
event-store-adapter-rs = "1.1.47"
