[workspace]
resolver = "2"

members = [
    "aws-lambda-functions",
    "modules/command/domain",
    "modules/command/interface-adaptor",
    "modules/command/interface-adaptor-if",
    "modules/command/processor",
]

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
async-trait = "0.1.88"

aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.80.0"

chrono = "0.4.41"
config = "0.14.0"
downcast-rs = "2.0.1"
env_logger = "0.11.3"
hyper = { version = "1.6.0", features = ["full"] }
itertools = "0.14.0"
log = "0.4.27"
once_cell = "1.21.3"
openssl = { version = "0.10.64", features = ["vendored"] }
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.6"

ulid-generator-rs = "0.0.112"
event-store-adapter-rs = "1.1.47"

tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false }
