[package]
name = "command-domain"
version.workspace = true
edition.workspace = true
description = "Domain models for the command side of the application"

[dependencies]
uuid.workspace = true
chrono.workspace = true
serde.workspace = true

[[example]]
name = "product_backlog_example"
path = "examples/product_backlog_example.rs"
