[package]
name = "command-interface-adaptor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
command-interface-adaptor-if = { path = "../interface-adaptor-if" }
command-processor = { path = "../processor" }
command-domain = { path = "../domain" }
downcast-rs = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
event-store-adapter-rs = { workspace = true }
async-graphql = { workspace = true, features = ["chrono"] }

axum = { workspace = true }
async-graphql-axum = { workspace = true }
