[package]
name = "command-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
command-interface-adaptor-if = { path = "../interface-adaptor-if" }
command-domain = { path = "../domain" }
downcast-rs = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
event-store-adapter-rs ={ workspace = true }